@@ -11,6 +11,7 @@ Changes in Version 1.0.0
   o Added the 'fixstart' function that can aide in fixing startvalues
   o The 'getmatrix' function now supports thresholded PDC matrices
   o Diagnostic functions 'checkJacobian' and 'checkFischer' are now exported
+  o Added the transmod function, which can be used to transform one model type (e.g., using a Cholesky decomposition) to another model type (e.g., a GGM).
 
 Changes in Version 0.11.5
   o Fixes to support Matrix 1.7-0
